--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.APPSIoTLab2"
         tools:targetApi="31">
         <activity
+            android:name=".TecladoNuevoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MonitorNuevoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ComputadoraNuevoActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
