--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
             android:name=".Computadora.ComputadoraActualizarActivity"
             android:exported="false" />
         <activity
+            android:name=".Computadora.ComputadoraActualizarActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
