--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,34 +16,45 @@
         tools:targetApi="31">
         <activity
             android:name=".Teclado.TecladoActualizarActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".Teclado.TecladoListActivity"
+            />
         <activity
             android:name=".reporteActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            />
         <activity
             android:name=".Teclado.TecladoListActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            />
         <activity
             android:name=".Monitor.MonitorListActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            />
         <activity
             android:name=".Teclado.TecladoNuevoActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".Teclado.TecladoListActivity"
+            />
         <activity
             android:name=".Monitor.MonitorNuevoActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".Monitor.MonitorListActivity"/>
         <activity
             android:name=".Computadora.ComputadoraNuevoActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".Computadora.ComputadoraListaActivity"/>
         <activity
             android:name=".Computadora.ComputadoraListaActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Computadora.ComputadoraActualizarActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Computadora.ComputadoraActualizarActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".Computadora.ComputadoraListaActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
